[gd_scene load_steps=7 format=3 uid="uid://dwiop8wuc7ah8"]

[ext_resource type="Texture2D" uid="uid://bpx3tad7bw0w4" path="res://Art/Furniture and room elements/cursed_idol.tres" id="1_fikx7"]
[ext_resource type="Script" path="res://Rooms/cursed_idol/cursed_idol.gd" id="1_fwwtv"]
[ext_resource type="Script" path="res://interact_area.gd" id="2_l3p5h"]
[ext_resource type="PackedScene" uid="uid://biarx0rmayotv" path="res://ui/cost_h_box.tscn" id="4_0ugjy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_45kma"]
radius = 5.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fswc4"]
radius = 5.0
height = 24.0

[node name="CursedIdol" type="StaticBody2D"]
script = ExtResource("1_fwwtv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_fikx7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_45kma")

[node name="InteractArea" type="Area2D" parent="."]
script = ExtResource("2_l3p5h")
path_to_sprite = NodePath("../Sprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(0, 7)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fswc4")

[node name="CostHBox" parent="." instance=ExtResource("4_0ugjy")]
